# hyperion-chlorophyll-a-driver

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: config.yaml
data/: raw_chlorophyll.txt  raw_turbidity.txt
hyperion_chlorophyll_a_driver/: package.xml  setup.cfg  setup.py
hyperion_chlorophyll_a_driver/hyperion_chlorophyll_a_driver/: data_processor_node.py
hyperion_chlorophyll_a_driver/hyperion_chlorophyll_a_driver/src/data_processor/: data_processor_node.py
hyperion_chlorophyll_a_driver/hyperion_chlorophyll_a_driver/src/tests/: test_driver.py
hyperion_chlorophyll_a_interfaces/: CMakeLists.txt  package.xml
hyperion_chlorophyll_a_interfaces/msg/: ChlorophyllData.msg
launch/: hyperion_chlorophyll.launch.py
msg/: ChlorophyllData.msg
src/serial_reader/: serial_reader_node.py
src/tests/: test_driver.py
