<package format="3">
  <name>valeport_hyperion_chlorophyll_driver</name>
  <version>0.0.1</version>
  <description>ROS 2 driver for Valeport Hyperion Chlorophyll a</description>

  <maintainer email="sdup@kth.se">Shekhar Devm Upadhyay</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclpy</depend>
  <depend>rosidl_default_runtime</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
