<package format="3">

    <name>hyperion_chlorophyll_a_interfaces</name>
    <version>0.0.0</version>
    <description>ROS 2 message format for the Valeport Hyperion Chlorophyll a</description>

    <maintainer email="sdup@kth.se">Shekhar Devm Upadhyay</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <depend>builtin_interfaces</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
